# hklpy2

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.rst  api.html  checklist_v2.html  concepts.html  design-discussion.html  diffractometers.html  environment.yml  examples.html  faq.html  genindex.html  geometry_tables.html  glossary.html  guide.html  guides.html  index.html  install.html  license.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  release_notes.html  search.html  searchindex.js  user_guide.html
.doctrees/: api.doctree  environment.pickle  guide.doctree  index.doctree  license.doctree
.doctrees/api/: backends.doctree  lattice.doctree  reflection.doctree  sample.doctree  z_misc.doctree
.doctrees/notebooks/: demo.doctree
.github/workflows/: code.yml  docs.yml  pages.yml  pypi.yml
_modules/: hklpy2.html  index.html
_modules/hklpy2/: beam.html  diffract.html  geom.html  incident.html  lattice.html  misc.html  ops.html  reflection.html  sample.html  tests.html  user.html  wavelength_support.html
_sources/: api.rst.txt  checklist_v2.md.txt  concepts.rst.txt  design-discussion.md.txt  examples.rst.txt  geometry_tables.rst.txt  glossary.rst.txt  guide.rst.txt  guides.rst.txt  index.rst.txt  install.rst.txt  quickstart.rst.txt  release_notes.rst.txt  user_guide.rst.txt
_sources/api/: backends.rst.txt  configure.rst.txt  constraints.rst.txt  diffract.rst.txt  geom.rst.txt  lattice.rst.txt  ops.rst.txt  reflection.rst.txt  sample.rst.txt  solvers.rst.txt  user.rst.txt  wavelength_support.rst.txt  z_misc.rst.txt
_sources/autoapi/: index.rst.txt
_sources/concepts/: _design-discussion.md.txt  constraints.rst.txt  creator.rst.txt  diffract.rst.txt  lattice.rst.txt  ops.rst.txt  reflection.rst.txt  solvers.rst.txt  user.rst.txt
_sources/examples/: _api_demo.ipynb.txt  constraints.rst.txt  demo.ipynb.txt  demo_UB_calc.ipynb.txt  demo_psi_scan_hklpy.ipynb.txt  demo_refine_lattice.ipynb.txt  demo_scan_hkl.ipynb.txt  diffract.rst.txt  e6c-hklpy.ipynb.txt  hkl_soleil-e4ch.ipynb.txt  hkl_soleil-e4cv.ipynb.txt  hkl_soleil-e6c-psi.ipynb.txt  hkl_soleil-e6c-test_calculations.ipynb.txt  hkl_soleil-k4cv.ipynb.txt  hkl_soleil-lattice_refine.ipynb.txt  hkl_soleil-ub_calc.ipynb.txt  hkl_soleil-ub_set.ipynb.txt  howto_refine_lattice.ipynb.txt  nslsii-tardis.ipynb.txt  tst_e4cv_fourc.ipynb.txt  zz_demo_libhkl_python_api.ipynb.txt
_sources/guides/: configuration_save_restore.ipynb.txt  diffract.rst.txt  how_additional_parameters.ipynb.txt  how_extra_real_axis.ipynb.txt  how_extra_reals_and_pseudos.ipynb.txt  howto_write_solver.rst.txt  spec_xref.rst.txt  var_engines.ipynb.txt
_sources/notebooks/: demo.ipynb.txt
_static/: documentation_options.js  hklpy2 modules.vsdx
api/: backends.html  configure.html  constraints.html  diffract.html  geom.html  lattice.html  ops.html  reflection.html  sample.html  solvers.html  user.html  wavelength_support.html  z_misc.html
api/backends/: abstract_solver.html  base.html  hkl_soleil.html  no_op.html  th_tth_q.html
autoapi/: index.html
autoapi/hklpy2/: index.html
concepts/: __overview.html  _checklist_v2.html  _design-discussion.html  constraints.html  creator.html  diffract.html  lattice.html  ops.html  reflection.html  sample.html  solvers.html  user.html  wavelength.html
concepts/planning/: _checklist_v2.html  _design-discussion.html
docs/: make_geometries_doc.py  requirements.txt
docs/source/: api.rst  checklist_v2.md  concepts.rst  conf.py  design-discussion.md  diffractometers.rst  examples.rst  faq.rst  geometry_tables.rst  glossary.rst  guide.rst  index.rst  install.rst  quickstart.rst  substitutions.txt  user_guide.rst
examples/: _api_demo.html  _api_demo.ipynb  configuration_save_restore.html  configuration_save_restore.ipynb  constraints.html  demo.html  demo.ipynb  demo_UB_calc.html  demo_UB_calc.ipynb  demo_UB_set.html  demo_UB_set.ipynb  demo_libhkl_python_api.html  demo_libhkl_python_api.ipynb  demo_psi_scan_hklpy.html  demo_psi_scan_hklpy.ipynb  demo_refine_lattice.html  demo_scan_hkl.html  demo_scan_hkl_hklpy2.html  diffract.html  e6c-hklpy.html  e6c-psi-hklpy.html  example-4-circle-creator.html  example-4-circle-custom-class.html  hkl_soleil-e4ch.html  hkl_soleil-e4ch.ipynb  hkl_soleil-e4cv+epics.html  hkl_soleil-e4cv.html  hkl_soleil-e6c-psi.html  hkl_soleil-e6c-psi.ipynb  hkl_soleil-e6c-test_calculations.html  hkl_soleil-e6c-test_calculations.ipynb  hkl_soleil-k4cv.html  hkl_soleil-lattice_refine.html  hkl_soleil-lattice_refine.ipynb  hkl_soleil-ub_calc.html  hkl_soleil-ub_calc.ipynb  hkl_soleil-ub_set.html  hkl_soleil-ub_set.ipynb  howto_calc_UB.html  howto_refine_lattice.html  (+12 more)
guides/: configuration_save_restore.html  diffract.html  how_additional_parameters.html  how_extra_real_axis.html  how_extra_real_axis.ipynb  how_extra_reals_and_pseudos.html  howto_write_solver.html  spec_xref.html  var_engines.html
hklpy2/: __init__.py  beam.py  design-considerations.md  diffract.py  geom.py  incident.py  lattice.py  misc.py  notes.md  ops.py  phoenix.py  reflection.py  sample.py  user.py  wavelength_support.py
hklpy2/backends/: __init__.py  abstract_solver.py  base.py  hkl_backend.py  hkl_soleil.py  hkl_soleil_utils.py  no_op.py  no_op_backend.py  th_tth_q.py
hklpy2/blocks/: __init__.py  configure.py  constraints.py  lattice.py  misc.py  reflection.py  sample.py
hklpy2/operations/: configure.py  constraints.py  lattice.py  misc.py  reflection.py  sample.py
hklpy2/tests/: FIXME_test_demo_notebook.py  FIXME_test_diffract.py  __init__.py  common.py  diffractometers.py  e4cv_orient.yml  fourc-configuration.yml  models.py  st.cmd  tardis-kcf.yml  tardis.yml  test_backends.py  test_beam.py  test_demo_notebook.py  test_diffract.py  test_e4cv.py  test_epics_motor_config_attrs.py  test_geom.py  test_incident.py  test_init.py  test_misc.py  test_ops.py  test_phoenix.py  test_reflection.py  test_sample.py  test_solver.py  test_tardis.py  test_user.py  test_wavelength_support.py  testing.db
notebooks/: demo.html  demo.ipynb
(+239 files in other folders)
