[build-system]
requires = [
  "setuptools_scm[toml]>=8",
  "setuptools>=64.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "hklpy2"
description = "2nd generation diffractometer controls for the Bluesky Framework."
authors = [
  { name="Pete Jemian", email="prjemian+hklpy2@gmail.com" },
]
maintainers = [
  { name="Pete Jemian", email="prjemian+hklpy2@gmail.com" },
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bluesky", "diffraction", "diffractometer"]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/?highlight=license
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: OpenStack",
    "Intended Audience :: Science/Research",
    "License :: Freely Distributable",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]

dependencies = [
  "hkl",  # [linux]
  "numpy",
  "ophyd",
  "packaging",  # ophyd needs this
  "pint",
  "pygobject",  # [linux]
]

[project.entry-points."hklpy2.solver"]
no_op = "hklpy2.backends.no_op:NoOpSolver"
hkl_soleil = "hklpy2.backends.hkl_soleil:HklSolver"  # [linux]
th_tth = "hklpy2.backends.th_tth_q:ThTthSolver"

[project.urls]
"Homepage" = "https://prjemian.github.io/hklpy2"
"Bug Tracker" = "https://github.com/prjemian/hklpy2/issues"

[tool.black]
line-length = 115  # matches the value of 'max-line-length' in .flake8
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | examples/archive
    | build
    | dist
  )/
  | hkl/_version.py
)
'''

[tool.flake8]
max-line-length = 115
extend-ignore = ["E501"]

[tool.isort]
profile = "black"
force_single_line  = "True"
line_length = 115
multi_line_output = "NOQA"
src_paths = ["hkl"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    # Both these warnings come from 'site-packages/epics/ca.py', via ophyd.
    "ignore:.*pkg_resources is deprecated as an API.*:DeprecationWarning",
    "ignore:.*pkg_resources.declare_namespace*:DeprecationWarning",
]

[tool.setuptools_scm]
